--- a/src/main/webapp/NewFile.html
+++ b/src/main/webapp/NewFile.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
  
-<body>
+<body><p>new </p>
 <p><font size="3" face="Verdana, Arial, Helvetica, sans-serif"><strong>Model List
   </strong></font></p>
 <a href="/ShoppingCart.jsp" mce_href="ShoppingCart.jsp">View Cart</a>
